Add minecraft subcommands